# check-encoding

./: .codespellrc  .editorconfig  .gitattributes  .gitignore  .gitlint  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .typos.toml  README.md  REUSE.toml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
check_encoding/: cli.py
tests/: test_basic.py
